# crawler

./: README.md  crawler.cabal  fetch.hs  main.hs  parse.hs  types.hs  urls.hs
eg/: direction_instructions.cfg  form_instructions.cfg
src/: Ajax.hs  Communication.hs  CountedQueue.hs  Crawl.hs  Directions.hs  DownloadRequest.hs  Errors.hs  Fetch.hs  FormTypes.hs  Forms.hs  FrontEnd.hs  FrontEndTypes.hs  Health.hs  HttpUtil.hs  Includes.hs  Initialisation.hs  Main.hs  MessageHandler.hs  Monitor.hs  Output.hs  Parse.hs  PoliteQueue.hs  Request.hs  Service.hs  Settings.hs  Shared.hs  Types.hs  Urls.hs  WarcDocument.hs  Workers.hs
src/CountedQueue/: Bounded.hs  Unbounded.hs
src/static/: fay.js
