name:                crawler
version:             0.1.0.0
license:             LGPL-3
license-file:        LICENSE
author:              jahaynes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable crawler
  main-is:             Main.hs
  build-depends:       attoparsec,
                       base,
                       bytestring,
                       case-insensitive,
                       conduit,
                       conduit-extra,
                       connection == 0.2.5,
                       containers,
                       either,
                       ekg,
                       hashable,
                       http-client,
                       http-conduit,
                       http-types,
                       lifted-base,
                       list-t,
                       resourcet,
                       split,
                       stm,
                       stm-containers,
                       network-uri,  
                       regex-posix,
                       safe,
                       store,
                       stringsearch,
                       tagsoup,
                       time,
                       transformers,
                       WebArchive
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:	       -Wall -O3 -threaded

executable monitor
  main-is:             Monitor.hs
  build-depends:       base, bytestring, blaze-html, blaze-markup, conduit, conduit-extra, resourcet, shakespeare, Spock <= 0.10.0.1 , store, wai-middleware-static, text, transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

