name:                crawler
version:             0.1.0.0
license:             LGPL-3
license-file:        LICENSE
author:              jahaynes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable crawler
  main-is:             Main.hs
  build-depends:       aeson,
                       attoparsec,
                       base,
                       bytestring,
                       case-insensitive,
                       conduit,
                       conduit-extra,
                       connection,
                       containers,
                       either,
                       ekg,
                       fast-tagsoup,
                       hashable,
                       http-client,
                       http-conduit,
                       http-types,
                       list-t,
                       resourcet,
                       split,
                       stm,
                       stm-containers,
                       network-uri,
                       regex-pcre,
                       regex-posix,
                       servant,
                       servant-server,
                       safe,
                       stringsearch,
                       tagsoup,
                       text,
                       time,
                       transformers,
                       warp,
                       WebArchive
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:	       -Wall -O3 -threaded

